Refresh .po files

--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-07-29 10:27-0400\n"
+"POT-Creation-Date: 2011-07-30 07:37-0400\n"
 "PO-Revision-Date: 2011-07-23 21:27+0200\n"
 "Last-Translator: Jørgen Thomsen <opensource@jth.net>\n"
 "Language-Team: danish <da@li.org>\n"
@@ -1327,9 +1327,9 @@ msgstr "Analyserer & indlæser logs. Dette kan vare nogen tid."
 #| "together. However only the SQL Text is being compared, thus the queries "
 #| "other attributes such as start time may differ."
 msgid ""
-"This columns shows the amount of identical queries that are grouped "
-"together. However only the SQL Text is being compared, thus the queries of "
-"other attributes such as start time may differ."
+"This column shows the amount of identical queries that are grouped together. "
+"However only the SQL query itself has been used as a grouping criteria, so "
+"the other attributes of queries, such as start time, may differ."
 msgstr ""
 "Denne kolonne viser mængden af identiske forspørgsler, som er grupperet "
 "sammen. Dog kun SQL tekst sammenlignes, så de andre attributter af "
