--- a/po/de.po
+++ b/po/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-07-29 10:27-0400\n"
+"POT-Creation-Date: 2011-07-30 07:37-0400\n"
 "PO-Revision-Date: 2011-07-25 14:55+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
@@ -1334,9 +1334,9 @@ msgstr "Analysiere und Lade Protokolle. Dies kann eine Weile dauern."
 #| "together. However only the SQL Text is being compared, thus the queries "
 #| "other attributes such as start time may differ."
 msgid ""
-"This columns shows the amount of identical queries that are grouped "
-"together. However only the SQL Text is being compared, thus the queries of "
-"other attributes such as start time may differ."
+"This column shows the amount of identical queries that are grouped together. "
+"However only the SQL query itself has been used as a grouping criteria, so "
+"the other attributes of queries, such as start time, may differ."
 msgstr ""
 "Diese Spalte zeigt die Anzahl der identischen Abfragen an, die gruppiert "
 "wurden. Dennoch wird nur der SQL-Text verglichen, daher kann die Angabe von "
