--- a/po/el.po
+++ b/po/el.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-07-29 10:27-0400\n"
+"POT-Creation-Date: 2011-07-30 07:37-0400\n"
 "PO-Revision-Date: 2011-07-26 18:41+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
@@ -1328,9 +1328,9 @@ msgstr "Ανάλυση & φόρτωση καταγραφών. Αυτό ίσως 
 #| "together. However only the SQL Text is being compared, thus the queries "
 #| "other attributes such as start time may differ."
 msgid ""
-"This columns shows the amount of identical queries that are grouped "
-"together. However only the SQL Text is being compared, thus the queries of "
-"other attributes such as start time may differ."
+"This column shows the amount of identical queries that are grouped together. "
+"However only the SQL query itself has been used as a grouping criteria, so "
+"the other attributes of queries, such as start time, may differ."
 msgstr ""
 "Αυτές οι στήλες δείχνουν τον αριθμό των μοναδικών ερωτημάτων που "
 "ομαδοποιήθηκαν. Ωστόσο, μόνο το Κείμενο SQL συγκρίνεται έτσι οι ιδιότητες "
