--- a/po/sv.po
+++ b/po/sv.po
@@ -1168,10 +1168,9 @@ msgid "Settings"
 msgstr "Inställningar"
 
 #: js/messages.php:105
-#, fuzzy
 #| msgid "Remove database"
 msgid "Remove chart"
-msgstr "Radera databasen"
+msgstr "Ta bort diagram"
 
 #: js/messages.php:106
 msgid "Edit labels and series"
