--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 23:33+0200\n"
+"PO-Revision-Date: 2011-07-30 23:34+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -1177,10 +1177,9 @@ msgid "Edit labels and series"
 msgstr "Redigera etiketter och serier"
 
 #: js/messages.php:107
-#, fuzzy
 #| msgid "Snap to grid"
 msgid "Add chart to grid"
-msgstr "Fäst vid rutnät"
+msgstr "Adders diagrammet till rutnätet"
 
 #: js/messages.php:109
 msgid "Please add at least one variable to the series"
