Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -1210,7 +1210,7 @@ msgstr "general_log är aktiverad."
 
 #: js/messages.php:116
 msgid "slow_query_log is enabled."
-msgstr ""
+msgstr "slow_query_log är aktiverad."
 
 #: js/messages.php:117
 msgid "slow_query_log and general_log are disabled."
