Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -1264,10 +1264,10 @@ msgstr "Aktivera %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:128
-#, fuzzy, php-format
+#, php-format
 #| msgid "Disabled"
 msgid "Disable %s"
-msgstr "Inaktiverad"
+msgstr "Inaktivera %s"
 
 #. l10n: %d seconds
 #: js/messages.php:130
