--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 17:24+0200\n"
+"PO-Revision-Date: 2011-07-31 17:25+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -1315,7 +1315,7 @@ msgstr "Från långsam logg"
 
 #: js/messages.php:141
 msgid "From general log"
-msgstr ""
+msgstr "Från allmän logg"
 
 #: js/messages.php:142
 msgid "Analysing & loading logs. This may take a while."
