--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 17:30+0200\n"
+"PO-Revision-Date: 2011-07-31 17:32+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -1337,6 +1337,8 @@ msgid ""
 "same table are also being grouped together, disregarding of the inserted "
 "data."
 msgstr ""
+"Sedan gruppering av INSERT frågor har valts, är INSERT frågor i samma tabell "
+"också grupperas tillsammans, oberoende av de infogade data."
 
 #: js/messages.php:145
 msgid "Log data loaded. Queries executed in this time span:"
