--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 17:33+0200\n"
+"PO-Revision-Date: 2011-07-31 17:34+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -1345,10 +1345,9 @@ msgid "Log data loaded. Queries executed in this time span:"
 msgstr "Loggdata laddad. Frågorna utförda under denna tidsperiod:"
 
 #: js/messages.php:147
-#, fuzzy
 #| msgid "Jump to database"
 msgid "Jump to Log table"
-msgstr "Gå till daatabas"
+msgstr "Gå till tabellogg"
 
 #: js/messages.php:148
 msgid "Log analysed, but not data found in this time span."
