Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 18:00+0200\n"
+"PO-Revision-Date: 2011-07-31 18:01+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -1373,10 +1373,9 @@ msgid "Group queries, ignoring variable data in WHERE statements"
 msgstr "Gruppfrågor, ignorera variabeldata i WHERE kommandon"
 
 #: js/messages.php:156
-#, fuzzy
 #| msgid "Number of inserted rows"
 msgid "Sum of grouped rows:"
-msgstr "Antal infogade rader"
+msgstr "Summan av grupperade rader:"
 
 #: js/messages.php:157
 #, fuzzy
