--- a/po/sv.po
+++ b/po/sv.po
@@ -1378,10 +1378,9 @@ msgid "Sum of grouped rows:"
 msgstr "Summan av grupperade rader:"
 
 #: js/messages.php:157
-#, fuzzy
 #| msgid "Total"
 msgid "Total:"
-msgstr "Total"
+msgstr "Totalt:"
 
 #: js/messages.php:161 libraries/tbl_properties.inc.php:780
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
