--- a/po/sv.po
+++ b/po/sv.po
@@ -1856,7 +1856,7 @@ msgstr "Teckenstorlek"
 
 #: libraries/File.class.php:220
 msgid "File was not an uploaded file."
-msgstr ""
+msgstr "Filen var inte en uppladdad fil."
 
 #: libraries/File.class.php:259 libraries/File.class.php:388
 #, fuzzy
