--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 18:05+0200\n"
+"PO-Revision-Date: 2011-07-31 18:06+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -6216,10 +6216,9 @@ msgid ""
 msgstr "Följande strukturer har antingen skapats eller ändrats. Här kan du"
 
 #: libraries/import.lib.php:1069
-#, fuzzy
 #| msgid "View a structure`s contents by clicking on its name"
 msgid "View a structure's contents by clicking on its name"
-msgstr "Visa en strukturs innehåll genom att klicka på dess namn"
+msgstr "Visa en strukturs innehåll genom att klicka på namnet"
 
 #: libraries/import.lib.php:1070
 msgid ""
