--- a/po/sv.po
+++ b/po/sv.po
@@ -6833,10 +6833,9 @@ msgid "Details"
 msgstr "Detaljer"
 
 #: libraries/rte/rte_events.lib.php:374
-#, fuzzy
 #| msgid "Event type"
 msgid "Event name"
-msgstr "Händelsetyp"
+msgstr "Händelsenamn"
 
 #: libraries/rte/rte_events.lib.php:395 server_binlog.php:182
 msgid "Event type"
