--- a/po/sv.po
+++ b/po/sv.po
@@ -6857,10 +6857,9 @@ msgid "Execute every"
 msgstr "Utför varje"
 
 #: libraries/rte/rte_events.lib.php:449
-#, fuzzy
 #| msgid "Startup"
 msgid "Start"
-msgstr "Uppstart"
+msgstr "Start"
 
 #: libraries/rte/rte_events.lib.php:465 libraries/rte/rte_routines.lib.php:912
 #: libraries/rte/rte_triggers.lib.php:348
