Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -6892,10 +6892,9 @@ msgid "You must provide a valid interval value for the event."
 msgstr "Du måste ange ett giltigt intervall värde för händelsen."
 
 #: libraries/rte/rte_events.lib.php:549
-#, fuzzy
 #| msgid "You must provide a routine definition."
 msgid "You must provide a valid execution time for the event."
-msgstr "Du måste ange en rutindefinition."
+msgstr "Du måste ange en giltig exekveringstid för händelsen."
 
 #: libraries/rte/rte_events.lib.php:553
 #, fuzzy
