Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -6912,7 +6912,7 @@ msgstr "Ny"
 
 #: libraries/rte/rte_footer.lib.php:91
 msgid "OFF"
-msgstr ""
+msgstr "OFF"
 
 #: libraries/rte/rte_footer.lib.php:96
 msgid "ON"
