--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 18:22+0200\n"
+"PO-Revision-Date: 2011-07-31 18:23+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -7047,10 +7047,9 @@ msgid "You must provide a name and a type for each routine parameter."
 msgstr "Du måste ange ett namn och en typ för varje rutinparameter."
 
 #: libraries/rte/rte_routines.lib.php:1065
-#, fuzzy
 #| msgid "You must provide a name and a type for each routine parameter."
 msgid "You must provide a valid return type for the routine."
-msgstr "Du måste ange ett namn och en typ för varje rutinparameter."
+msgstr "Du måste ange en giltig returtyp för händelsen."
 
 #: libraries/rte/rte_routines.lib.php:1109
 msgid "You must provide a routine definition."
