--- a/po/sv.po
+++ b/po/sv.po
@@ -7088,10 +7088,10 @@ msgid "Sorry, we failed to restore the dropped trigger."
 msgstr "Tyvärr lyckades vi inte återställa den släppta triggern."
 
 #: libraries/rte/rte_triggers.lib.php:94
-#, fuzzy, php-format
+#, php-format
 #| msgid "Routine %1$s has been modified."
 msgid "Trigger %1$s has been modified."
-msgstr "Rutinen %1$s har modifierats."
+msgstr "Triggern %1$s har modifierats."
 
 #: libraries/rte/rte_triggers.lib.php:106
 #, fuzzy, php-format
