--- a/po/sv.po
+++ b/po/sv.po
@@ -7115,10 +7115,9 @@ msgid "Trigger name"
 msgstr "Trigger namn"
 
 #: libraries/rte/rte_triggers.lib.php:399
-#, fuzzy
 #| msgid "You must provide a routine name"
 msgid "You must provide a trigger name"
-msgstr "Du måste ange ett rutinnamn"
+msgstr "Du måste ange ett triggernamn"
 
 #: libraries/rte/rte_triggers.lib.php:404
 #, fuzzy
