--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 18:29+0200\n"
+"PO-Revision-Date: 2011-07-31 20:05+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -7120,10 +7120,9 @@ msgid "You must provide a trigger name"
 msgstr "Du måste ange ett triggernamn"
 
 #: libraries/rte/rte_triggers.lib.php:404
-#, fuzzy
 #| msgid "You must provide a routine name"
 msgid "You must provide a valid timing for the trigger"
-msgstr "Du måste ange ett rutinnamn"
+msgstr "Du måste ange en giltig tidsgräns för triggern"
 
 #: libraries/rte/rte_triggers.lib.php:409
 #, fuzzy
