--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:09+0200\n"
+"PO-Revision-Date: 2011-07-31 20:10+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -7154,10 +7154,9 @@ msgid "routine"
 msgstr "Rutin"
 
 #: libraries/rte/rte_words.lib.php:22
-#, fuzzy
 #| msgid "You do not have the necessary privileges to create a new routine"
 msgid "You do not have the necessary privileges to create a routine"
-msgstr "Du har inte tillräcklig behörighet för att skapa en ny rutin"
+msgstr "Du har inte den nödvändiga behörigheent att skapa en rutin"
 
 #: libraries/rte/rte_words.lib.php:23
 #, php-format
