--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:12+0200\n"
+"PO-Revision-Date: 2011-07-31 20:13+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -7198,10 +7198,9 @@ msgid "There are no triggers to display."
 msgstr "Det finns inga triggers att visa"
 
 #: libraries/rte/rte_words.lib.php:42
-#, fuzzy
 #| msgid "Add an event"
 msgid "Add event"
-msgstr "Lägg till en ny händelse"
+msgstr "Lägg till händelse"
 
 #: libraries/rte/rte_words.lib.php:44
 #, php-format
