--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:15+0200\n"
+"PO-Revision-Date: 2011-07-31 20:16+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -7213,10 +7213,9 @@ msgid "event"
 msgstr "händelse"
 
 #: libraries/rte/rte_words.lib.php:46
-#, fuzzy
 #| msgid "You do not have the necessary privileges to create a new routine"
 msgid "You do not have the necessary privileges to create an event"
-msgstr "Du har inte tillräcklig behörighet för att skapa en ny rutin"
+msgstr "Du har inte tillräcklig behörighet för att skapa en händelse"
 
 #: libraries/rte/rte_words.lib.php:47
 #, fuzzy, php-format
