Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:20+0200\n"
+"PO-Revision-Date: 2011-07-31 20:21+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9203,6 +9203,8 @@ msgid ""
 "The number of connections that were aborted because the client died without "
 "closing the connection properly."
 msgstr ""
+"Antalet anslutningar som avbröts eftersom klienten dog utan att stänga "
+"anslutningen ordentligt."
 
 #: server_status.php:1076
 msgid "The number of failed attempts to connect to the MySQL server."
