Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:27+0200\n"
+"PO-Revision-Date: 2011-07-31 20:32+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9910,6 +9910,11 @@ msgid ""
 "        general_log produces a lot of data and increases server load by up "
 "to 15%"
 msgstr ""
+"phpMyAdmin Monitor hjälpa dig optimera server konfigurationen och spåra tid "
+"intensivt \\ icke intensiva frågor. För de senare måste du ställa log_output "
+"till \"TABLE\" och ha antingen slow_query_log eller general_log aktiverat. "
+"Observera att general_log producerar mycket data och ökar lasten på servern "
+"med upp till 15%"
 
 #: server_status.php:1373
 msgid ""
