Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:42+0200\n"
+"PO-Revision-Date: 2011-07-31 20:46+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9952,6 +9952,12 @@ msgid ""
 "not required any more.\n"
 "        "
 msgstr ""
+"<b>Observera:</b>\n"
+" Att aktivera general_log kan öka belastningen på servern med 5-15%. Var "
+"medveten om att generera statistik från loggarna är en \n"
+"belastningsintensiv uppgift, så det är klokt att välja en kort tidsperiod "
+"samt att inaktivera general_log och tömma tabellen när övervakningen inte "
+"behövs längre. \n"
 
 #: server_status.php:1396
 #, fuzzy
