--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-31 20:47+0200\n"
+"PO-Revision-Date: 2011-07-31 20:48+0200\n"
 "Last-Translator:  <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
 "Language: sv\n"
@@ -9999,7 +9999,7 @@ msgstr "Du måste ange ett rutinnamn"
 
 #: server_status.php:1428
 msgid "Display as differential value"
-msgstr ""
+msgstr "Visa som differensvärde"
 
 #: server_status.php:1430
 msgid "Apply a divisor"
