--- a/po/sv.po
+++ b/po/sv.po
@@ -9942,7 +9942,7 @@ msgid ""
 "5-15%. Also be aware that generating statistics from the logs is a load "
 "intensive task, so it is advisable to select only a small time span and to "
 "disable the general_log and empty its table once monitoring is not required "
-"any more."
+"any more.\n"
 msgstr ""
 "<b>Observera:</b>\n"
 " Att aktivera general_log kan öka belastningen på servern med 5-15%. Var "
